--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <label id="victory"></label>
             <div id="game"></div>
             <div id="score">
-                <label id="moves"></label>
+                <label id="attempts"></label>
                 <label id="matches"></label>
             </div>
             <div id="difficultyWrapper">
